尝试信誉分运作（没改完