@@ -1,17 +1,22 @@
 package org.example.back.service.impl;
 
 import jakarta.transaction.Transactional;
+import lombok.extern.slf4j.Slf4j;
+import org.example.back.config.JwtAuthenticationInterceptor;
 import org.example.back.dto.request.TaskCreateRequest;
+import org.example.back.dto.response.HomeStatResp;
 import org.example.back.dto.response.TaskVO;
-import org.example.back.entity.Task;
-import org.example.back.entity.TaskParticipant;
+import org.example.back.entity.*;
 import org.example.back.exception.AuthenticationException;
+import org.example.back.exception.ResourceConflictException;
 import org.example.back.repository.TaskParticipantRepository;
 import org.example.back.config.JwtAuthenticationInterceptor;
 import org.example.back.exception.ResourceNotFoundException;
-import org.example.back.repository.TaskRepository;
-import org.example.back.service.TaskService;
+import org.example.back.repository.*;
+import org.example.back.service.AchievementService;
 import org.example.back.service.PointsService;
+import org.example.back.service.TaskService;
+import org.example.back.service.UserService;
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DataIntegrityViolationException;
@@ -19,159 +24,164 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
+import java.time.*;
 import java.time.format.DateTimeFormatter;
-import java.time.format.DateTimeParseException;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
+@Slf4j
 public class TaskServiceImpl implements TaskService {
 
-    @Autowired
-    private TaskRepository taskRepository;
+    @Autowired private TaskRepository taskRepository;
+    @Autowired private TaskParticipantRepository taskParticipantRepository;
+    @Autowired private PointsService pointsService;
+    @Autowired private AchievementService achievementService;
+    @Autowired private UserRepository userRepository;
+    @Autowired private UserService userService;
 
-    @Autowired
-    private TaskParticipantRepository taskParticipantRepository;
+    private static final int PENALTY_POINTS = 5;
 
-    @Autowired
-    private PointsService pointsService;
-
+    // ================= create =================
     @Override
     @Transactional
     public Long createTask(TaskCreateRequest request) {
-
-        Task task = new Task();
-        BeanUtils.copyProperties(request, task);
-
-//        // BeanUtils 不会自动把 String -> LocalDateTime 做可靠转换
-//        // 同时 TaskCreateRequest 目前没有 getter，因此用反射读取 deadline 字段再解析。
-//        String deadlineStr = extractDeadlineStr(request);
-//        task.setDeadline(parseDeadline(deadlineStr));
-        String deadlinestr = request.getDeadline();
-        task.setDeadline(parseDeadline(deadlinestr));
-
-        task.setCurrentPeople(0);
-        task.setStatus("OPEN");
-
-        // 从JWT中获取真实发布人ID
-        Long publisherId = JwtAuthenticationInterceptor.getCurrentUserId();
-        if (publisherId == null) {
-            throw new AuthenticationException("用户未登录，无法发布任务");
-        }
-        task.setPublisherId(publisherId);
-
-        Task saved = taskRepository.save(task);
-        return saved.getId();
-    }
-
-    @Override
-    public List<TaskVO> list(int page, int size) {
-        var pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "createdAt"));
-
-        return taskRepository.findAll(pageable)
-                .getContent()
-                .stream()
-                .map(this::toVO)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional
-    public Task grabTask(Long taskId) {
 
         Long userId = JwtAuthenticationInterceptor.getCurrentUserId();
         if (userId == null) {
             throw new AuthenticationException("用户未登录");
         }
 
-        // 先查任务（校验状态）
+        Task task = new Task();
+        BeanUtils.copyProperties(request, task);
+
+        task.setDeadline(parseDeadline(request.getDeadline()));
+        task.setCurrentPeople(0);
+        task.setStatus("OPEN");
+        task.setPublisherId(userId);
+
+        Long taskId = taskRepository.save(task).getId();
+        achievementService.recalculateUserAchievements(userId);
+        return taskId;
+    }
+
+    // ================= list =================
+    @Override
+    public List<TaskVO> list(int page, int size) {
+        log.info("list tasks, page={}, size={}",page,size);
+        var pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "createdAt"));
+
+        // 传入状态过滤条件
+        List<TaskVO> resp=taskRepository.findAllByStatus("OPEN", pageable)
+                .getContent()
+                .stream()
+                .map(this::toVO)
+                .collect(Collectors.toList());
+        log.info("list resp: "+ resp);
+        return resp;
+    }
+
+    // ================= grab =================
+    @Override
+    @Transactional
+    public TaskVO grabTask(Long taskId) {
+
+        Long userId = JwtAuthenticationInterceptor.getCurrentUserId();
+        if (userId == null) {
+            throw new AuthenticationException("用户未登录");
+        }
+
         Task task = taskRepository.findById(taskId)
                 .orElseThrow(() -> new ResourceNotFoundException("任务不存在"));
 
         if (!"OPEN".equals(task.getStatus())) {
-            throw new IllegalArgumentException("任务不可抢");
+            throw new ResourceConflictException("任务不可抢");
         }
+      
+//        if (task.getPublisherId() != null && task.getPublisherId().equals(userId)) {
+//            throw new ResourceConflictException("不能抢自己发布的任务");
+//        }
 
-        if (taskParticipantRepository.existsByTaskIdAndUserId(taskId, userId)){
-            throw new IllegalArgumentException("你已经抢过该任务！");
-        }
+//        if (taskParticipantRepository.existsByTaskIdAndUserId(taskId, userId)) {
+//            throw new ResourceConflictException("你已经抢过该任务！");
+//        }
 
-        // 再抢名额（原子操作）
         int updated = taskRepository.incrementIfNotFull(taskId);
         if (updated == 0) {
-            throw new IllegalArgumentException("任务已满");
+            throw new ResourceConflictException("任务已满");
         }
 
-        // 插入参与记录（用唯一索引兜底！）
         try {
-            TaskParticipant participant = TaskParticipant.builder()
+
+            TaskParticipant p = TaskParticipant.builder()
                     .taskId(taskId)
                     .userId(userId)
                     .status("JOINED")
                     .build();
 
-            taskParticipantRepository.save(participant);
+            taskParticipantRepository.save(p);
+            log.info("task participant: " + p);
 
         } catch (DataIntegrityViolationException e){
-            taskRepository.decrementIfNotEmpty(taskId);
-            throw new IllegalArgumentException("你已经抢过该任务！");
-        } catch (Exception e) {
-            taskRepository.decrementIfNotEmpty(taskId);
-            throw new RuntimeException("系统异常，请稍后再试");
+            log.info("Already have task participant: " + task);
+            throw new ResourceConflictException("你已经抢过该任务！");
         }
 
-        //该修改有竞态条件，采用原子化操作
-//        // 重新查（拿最新人数）
-//        Task latestTask = taskRepository.findById(taskId).get();
-//
-//        // 满员 → 修改状态
-//        if (latestTask.getCurrentPeople() >= latestTask.getNeedPeople()) {
-//            latestTask.setStatus("IN_PROGRESS");
-//            taskRepository.save(latestTask);
-//        }
         taskRepository.updateStatusIfFull(taskId);
 
-        Task taskGrabbed=taskRepository.findById(taskId).get();
-        return taskGrabbed;
+        return toVO(taskRepository.findById(taskId).get());
     }
 
+    // ================= finish =================
     @Override
     @Transactional
     public void finishTask(Long taskId) {
 
-        Task task = taskRepository.findById(taskId)
-                .orElseThrow(() -> new ResourceNotFoundException("任务"+taskId+"不存在"));
+        Long userId = JwtAuthenticationInterceptor.getCurrentUserId();
+        if (userId == null) {
+            throw new AuthenticationException("用户未登录");
+        }
 
-        // 更新任务状态为已完成
+        log.info("finishtask, taskId="+taskId+", userId="+userId);
+
+        Task task = taskRepository.findById(taskId)
+                .orElseThrow(() -> new ResourceNotFoundException("任务不存在"));
+
+//        boolean ok = taskParticipantRepository.existsByTaskIdAndUserId(taskId, userId);
+//        if (!ok) {
+//            throw new IllegalArgumentException("无权限完成任务");
+//        }
+
+        if (!"IN_PROGRESS".equals(task.getStatus())) {
+            throw new ResourceConflictException("任务状态非法");
+        }
+
         task.setStatus("FINISHED");
         taskRepository.save(task);
 
-        // 如果没有奖励积分，则只更新任务状态
         Integer reward = task.getRewardPoints();
-        if (reward == null || reward <= 0) {
-            return;
-        }
+        if (reward == null || reward <= 0) return;
 
-        // 查找参与者，过滤出仍为 JOINED 的参与者，更新其状态并发放积分
-        List<TaskParticipant> participants = taskParticipantRepository.findByTaskId(taskId);
-        for (TaskParticipant p : participants) {
-            if (!"JOINED".equals(p.getStatus())) {
-                continue;
-            }
+        List<TaskParticipant> list = taskParticipantRepository.findByTaskId(taskId);
+
+        for (TaskParticipant p : list) {
+            if (!"JOINED".equals(p.getStatus())) continue;
+
             p.setStatus("FINISHED");
             taskParticipantRepository.save(p);
 
-            // 发放积分（标题和描述带上任务信息）
-            String title = "完成任务";
-            String desc = "完成任务 " + task.getTitle() + " 获得 "+ reward +" 积分";
-            pointsService.addPoints(p.getUserId(), reward, title, desc);
+            pointsService.addPoints(
+                    p.getUserId(),
+                    reward,
+                    "完成任务",
+                    "完成任务 " + task.getTitle()
+            );
+
+            achievementService.recalculateUserAchievements(p.getUserId());
         }
     }
 
+    // ================= cancel =================
     @Override
     @Transactional
     public void cancelTask(Long taskId) {
@@ -181,29 +191,128 @@ public class TaskServiceImpl implements TaskService {
         }
 
         Task task = taskRepository.findById(taskId)
-                .orElseThrow(() -> new ResourceNotFoundException("任务不存在"));
+                .orElseThrow(() -> new ResourceNotFoundException("任务不存在: " + taskId));
 
-        if (!userId.equals(task.getPublisherId())) {
-            throw new IllegalArgumentException("仅发布者可取消该任务");
+        TaskParticipant participant = taskParticipantRepository
+                .findByTaskIdAndUserId(taskId, userId)
+                .orElseThrow(() -> new ResourceNotFoundException("当前用户未加入该任务"));
+
+        if ("FINISHED".equals(participant.getStatus())) {
+            throw new ResourceConflictException("已完成的参与记录不能取消");
+        }
+        if ("CANCELLED".equals(participant.getStatus())) {
+            throw new ResourceConflictException("已取消的参与记录无法重复取消");
         }
 
-        String status = task.getStatus();
-        if ("FINISHED".equals(status)) {
-            throw new IllegalArgumentException("任务已完成，无法取消");
-        }
-        if ("CANCELLED".equals(status)) {
-            throw new IllegalArgumentException("任务已取消");
-        }
+        // 标记参与记录为已取消
+        participant.setStatus("CANCELLED");
+        taskParticipantRepository.save(participant);
 
-        taskParticipantRepository.deleteByTaskId(taskId);
-        task.setCurrentPeople(0);
-        task.setStatus("CANCELLED");
+        // 减少已参与人数（防止负值）
+        if (task.getCurrentPeople() == null) {
+            task.setCurrentPeople(0);
+        } else if (task.getCurrentPeople() > 0) {
+            task.setCurrentPeople(task.getCurrentPeople() - 1);
+        }
         taskRepository.save(task);
+
+        // 在任务开始前 24 小时内取消，扣除 5 点信用分（针对接任务的人）
+        if (task.getDeadline() != null) {
+            LocalDateTime now = LocalDateTime.now();
+            LocalDateTime cutoff = task.getDeadline().minusHours(24);
+            if (!now.isBefore(cutoff)) { // now >= cutoff 说明在 24 小时内取消
+                User user = userRepository.findById(userId)
+                        .orElseThrow(() -> new ResourceNotFoundException("用户不存在: " + userId));
+                int newScore = Math.max(0, (user.getCreditScore() == null ? 0 : user.getCreditScore()) - 5);
+                user.setCreditScore(newScore);
+                userRepository.save(user);
+            }
+        }
     }
 
+    // ================= history =================
+    @Override
+    public List<TaskVO> myTaskHistory() {
+
+        Long userId = JwtAuthenticationInterceptor.getCurrentUserId();
+        if (userId == null) {
+            throw new AuthenticationException("用户未登录");
+        }
+
+        return taskRepository.findByPublisherId(userId)
+                .stream()
+                .map(this::toVO)
+                .collect(Collectors.toList());
+    }
+
+    // ================= participated tasks =================
+    @Override
+    public List<TaskVO> myParticipatedTasks() {
+
+        Long userId = JwtAuthenticationInterceptor.getCurrentUserId();
+        if (userId == null) {
+            throw new AuthenticationException("用户未登录");
+        }
+
+        return taskParticipantRepository.findByUserId(userId)
+                .stream()
+                .map(p -> taskRepository.findById(p.getTaskId())
+                        .orElse(null))
+                .filter(task -> task != null)
+                .map(this::toVO)
+                .collect(Collectors.toList());
+    }
+
+    // ================= search =================
+    @Override
+    public List<TaskVO> findByTitle(String keywords) {
+
+        return taskRepository.findByTitleContaining(keywords)
+                .stream()
+                .map(this::toVO)
+                .collect(Collectors.toList());
+    }
+
+    // ================= detail =================
+    @Override
+    public TaskVO findById(Long id) {
+
+        Task t = taskRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("任务不存在"));
+
+        return toVO(t);
+    }
+
+    // ================= stats =================
+    @Override
+    public HomeStatResp stats() {
+
+        HomeStatResp r = new HomeStatResp();
+
+        int users = (int) userRepository.count();
+        int open = 0, fin = 0;
+
+        for (Task t : taskRepository.findAll()) {
+            if ("FINISHED".equals(t.getStatus())) fin++;
+            else if ("OPEN".equals(t.getStatus())) open++;
+        }
+
+        r.setUsers(users);
+        r.setFinished(fin);
+        r.setInProgress(open);
+
+        return r;
+    }
+
+    // ================= VO =================
     private TaskVO toVO(Task task) {
+
+        User u = userRepository.findById(task.getPublisherId())
+                .orElseThrow(() -> new ResourceNotFoundException("用户不存在"));
+
         TaskVO vo = new TaskVO();
-        vo.setId(task.getId());
+
+        vo.setTaskId(task.getId());
         vo.setTitle(task.getTitle());
         vo.setDescription(task.getDescription());
         vo.setNeedPeople(task.getNeedPeople());
@@ -211,69 +320,40 @@ public class TaskServiceImpl implements TaskService {
         vo.setStatus(task.getStatus());
         vo.setType(task.getType());
         vo.setPublisherId(task.getPublisherId());
-
-//        vo.setRewardMoney(task.getRewardMoney());
+        vo.setPublisherName(u.getUsername());
         vo.setRewardPoints(task.getRewardPoints());
 
-        vo.setCreatedAt(task.getCreatedAt().atZone(ZoneId.systemDefault()).toInstant().toEpochMilli());
-        vo.setDeadline(task.getDeadline().atZone(ZoneId.systemDefault()).toInstant().toEpochMilli());
+        vo.setCreatedAt(task.getCreatedAt().atZone(ZoneId.systemDefault())
+                .toInstant().toEpochMilli());
+
+        vo.setDeadline(task.getDeadline().atZone(ZoneId.systemDefault())
+                .toInstant().toEpochMilli());
+
         return vo;
     }
 
-    @Override
-    public List<Task> myTaskHistory(){
-        Long userId = JwtAuthenticationInterceptor.getCurrentUserId();
-        if (userId == null) {
-            throw new AuthenticationException("用户未登录");
-        }
-        List<Task> taskhistory = taskRepository.findByPublisherId(userId);
-        return taskhistory;
-    }
+    // ================= deadline =================
+    private LocalDateTime parseDeadline(String s) {
 
-    private LocalDateTime parseDeadline(String deadlineStr) {
-        if (deadlineStr == null || deadlineStr.trim().isEmpty()) {
-            return null;
-        }
+        if (s == null || s.isBlank()) return null;
 
-        String s = deadlineStr.trim();
-        DateTimeFormatter[] formatters = new DateTimeFormatter[] {
-                DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"),
-                DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm"),
-                DateTimeFormatter.ISO_LOCAL_DATE_TIME
+        s = s.trim();
+
+        String[] patterns = {
+                "yyyy-MM-dd HH:mm:ss",
+                "yyyy-MM-dd HH:mm",
         };
 
-        for (DateTimeFormatter formatter : formatters) {
+        for (String p : patterns) {
             try {
-                return LocalDateTime.parse(s, formatter);
-            } catch (DateTimeParseException ignored) {
-                // try next
-            }
+                return LocalDateTime.parse(s, DateTimeFormatter.ofPattern(p));
+            } catch (Exception ignored) {}
         }
 
-        // 兜底：只传日期时，默认时间为 00:00:00
         try {
-            LocalDate date = LocalDate.parse(s, DateTimeFormatter.ISO_LOCAL_DATE);
-            return date.atStartOfDay();
-        } catch (DateTimeParseException ignored) {
-            throw new IllegalArgumentException("deadline 格式错误: " + deadlineStr);
+            return LocalDate.parse(s).atStartOfDay();
+        } catch (Exception e) {
+            throw new IllegalArgumentException("deadline格式错误");
         }
-    }
-
-    @Override
-    public List<TaskVO> findByTitle(String keywords){
-        List<Task> tasks=taskRepository.findByTitleLike("%"+keywords+"%");
-        List<TaskVO> vos=new ArrayList<TaskVO>();
-        for(Task task:tasks){
-            vos.add(toVO(task));
-        }
-        return vos;
-    }
-
-    @Override
-    public TaskVO findById(Long taskId){
-        Task t=taskRepository.findById(taskId)
-                .orElseThrow(() -> new ResourceNotFoundException("任务不存在！"));
-        TaskVO vo=toVO(t);
-        return vo;
     }
 }
